@@ -352,6 +352,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/x2goutils.h: fix compile error due to typo.
     - src/pulsemanager.cpp: fix compile error on Windows.
     - src/pulsemanager.cpp: fix startup when using the system-PA version.
+    - src/pulsemanager.cpp: fix startup sound playback when using the
+      system-PA version.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
